# notebooks

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: README.md
.github/workflows/: fetch-transform-record.yml  migrate-prod.yml  migrate.yml  test-migration.yml
commonHelpers/: formTypes.ts  formsHandlers.ts  locations.ts  routes.ts  utils.ts
cooks-migration/: dataPrep.ipynb  deno.json  get-field-diff.ipynb  map-locations.ts  migrate.ipynb
cooks-migration/formData/: v1FormFields.json  v2EventFields.json
cooks-migration/helpers/: addressConfig.ts  adoptionTypes.ts  birthTypes.ts  csvHelpers.ts  csvTypes.ts  deathTypes.ts  divorceTypes.ts  generators.ts  marriageTypes.ts  nameChangeTypes.ts  renamingHelper.ts  resolverHelpers.ts  transform.ts  types.ts
cooks-migration/lookupMappings/: allUniqueAddresses.json  allUniqueNationalitiesAndRaces.json  allUniqueRegistrars.json  facilities.json  informantTypes.ts  (+13 more)
data-generators/: README.md  deno.json  generateData.ipynb  prepareEvents.ipynb
scripts/: deno-notebook-to-deno.sh
tests/: data-generators.ts  deno.json  helpers.ts  roundtrip.test.ts  utils.ts
ui-tests/: README.md  constants.ts  helpers.ts  package.json
v1-to-v2-data-migration/: README.md  authentication.ts  fetch-and-transform-all.ipynb  fetch-and-transform-death.ipynb  fetch-and-transform.ipynb  fieldMapper.ts  form-converter.ipynb  get-field-diff.ipynb  label-generator.ipynb  migrate.ipynb  testies.ipynb  transform.ts
verifiable-credentials/: README.md  demo.ipynb  deno.jsonc  issue.ipynb  opencrvs-api.ts  verifiable-credential.json
(+144 files in other folders)
