[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = [
  "Riku Rouvila <riku@opencrvs.org>",
  "Pankaj Pant <pankaj@opencrvs.org>",
  "Barry Dwyer <barry@opencrvs.org>",
  "Pyry Rouvila <pyry@opencrvs.org>",
  "Euan Millar <euan@opencrvs.org>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
nbstripout = ">=0.8.1,<0.9.0"
python = ">=3.8,<=3.13.1"

